--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<nav>
+		<ul class="navbars">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact us</a></li>	
+		</ul>
+	</nav>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
